feat: Create a Greenhouse
