# backend/openapi-schema.yml
@@ -1230,6 +1230,31 @@ paths:
           description: ''
       tags:
       - api
+  /api/greenhouses/create_greenhouse/:
+    post:
+      operationId: createGreenhouseGreenhouse
+      description: ''
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateGreenhouse'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/CreateGreenhouse'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/CreateGreenhouse'
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateGreenhouse'
+          description: ''
+      tags:
+      - api
   /api/flowerbeds/{id}/rent/:
     post:
       operationId: rentFlowerbed
@@ -3303,6 +3328,87 @@ components:
       - greenhouse
       - price
       - quantity
+    CreateGreenhouse:
+      type: object
+      properties:
+        title:
+          type: string
+          nullable: true
+        description:
+          type: string
+          nullable: true
+        published:
+          type: boolean
+        greenhouse_address:
+          type: object
+          properties:
+            id:
+              type: integer
+              readOnly: true
+            country:
+              type: string
+              nullable: true
+            state:
+              type: string
+              nullable: true
+            city:
+              type: string
+              nullable: true
+            city_part:
+              type: string
+              nullable: true
+            street:
+              type: string
+              nullable: true
+            zipcode:
+              type: string
+              nullable: true
+            latitude:
+              type: string
+              nullable: true
+            longitude:
+              type: string
+              nullable: true
+        greenhouse_business_hours:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                readOnly: true
+              greenhouse_business_hour_periods:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      readOnly: true
+                    open:
+                      type: string
+                    close:
+                      type: string
+                    business_hour:
+                      type: integer
+                      nullable: true
+                  required:
+                  - open
+                  - close
+              day:
+                type: integer
+                maximum: 2147483647
+                minimum: -2147483648
+              greenhouse:
+                type: integer
+                nullable: true
+            required:
+            - greenhouse_business_hour_periods
+            - day
+      required:
+      - title
+      - description
+      - published
     CreateRent:
       type: object
       properties:
